@@ -33,6 +33,7 @@ cgrates (0.11.0~dev) UNRELEASED; urgency=medium
     DataDB/StorDB
   * [Migrator] Auto discover tenant from key instead of taking it from config
   * [Templates] Fixed missing "*" for strip and pading strategy
+  * [DiameterAgent] Added RAR support
 
  -- Alexandru Tripon <alexandru.tripon@itsyscom.com>  Wed, 19 Feb 2020 13:25:52 +0200
 
